feat: custom end-point and handler for episodes by date
